adicionado context api

--- a/src/App.css
+++ b/src/App.css
@@ -163,9 +163,9 @@ Extra extra large	xxl	≥1400px
   margin-bottom: -35px;
 }
 
-.imgSpace001{background-image: url("./assets/clinica/001.png");}
-.imgSpace002{background-image: url("./assets/clinica/002.jpg");}
-.imgSpace003{background-image: url("./assets/clinica/003.jpg");}
+.imgSpace001{background-image: url("./assets/clinica/clinica-01.png");}
+.imgSpace002{background-image: url("./assets/clinica/clinica-02.png");}
+.imgSpace003{background-image: url("./assets/clinica/clinica-03.png");}
 
 /* end row 03 */
 
