--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@ Extra extra large	xxl	≥1400px
 
 
 /* begin row 01 */
-
 .imgCristine{
   border: 10px #efefef solid;
   border-bottom-right-radius: 100px;
@@ -48,14 +47,12 @@ Extra extra large	xxl	≥1400px
 .about-cristine{
   text-align: left;
 }
-
 .about-cristine h1,
 .about-cristine h2,
 .about-cristine h3
 {
   font-family: f1;
 }
-
 .about-cristine h1{
   color: #C08F97;
   font-size: 40px;
@@ -110,8 +107,12 @@ Extra extra large	xxl	≥1400px
   font-weight: bold;
   text-align: center;
   margin-bottom: 10vh;
+  cursor: pointer;
 }
-
+.solutions div.solution-item:hover{
+  color: #793742;
+  transition: color 0.8s ease-out;
+}
 @media (max-width:992px) {
   .solutions div.solution-item{
     width: 40vw;
@@ -150,7 +151,6 @@ Extra extra large	xxl	≥1400px
   font-size: 21px;
   font-family: f2;
 }
-
 .imgSpace{
   width: 36vh;
   height: 22vh;
@@ -162,7 +162,6 @@ Extra extra large	xxl	≥1400px
   border-top-left-radius: 20px;
   margin-bottom: -35px;
 }
-
 .imgSpace001{background-image: url("./assets/clinica/clinica-01.png");}
 .imgSpace002{background-image: url("./assets/clinica/clinica-02.png");}
 .imgSpace003{background-image: url("./assets/clinica/clinica-03.png");}
@@ -187,6 +186,13 @@ Extra extra large	xxl	≥1400px
   color: #DCC1BB;
   font-size: 30px;
 }
+.contact h2 a{
+  color: inherit;
+  text-decoration: none;
+}
+.contact h2 a:hover{
+  text-decoration: underline;
+}
 .contact .whatsappButton{
   max-width: 100%;
 }
@@ -196,3 +202,23 @@ Extra extra large	xxl	≥1400px
   font-family: f2;
 }
 /* end row 04 */
+
+
+
+
+/* begin modal */
+.modal-header{
+  border-bottom: 1px #efefef solid;
+}
+.modal-title{
+  font-size: 21px;
+  padding-left: 15px;
+}
+.modal-body{
+  color: #CCC;
+  font-size: 16px;
+  font-family: f2;
+  text-align: left;
+  padding: 30px;
+}
+/* end modal */
